# scalable_ml

./: README.md  create_dummy_pred.py  data_compile.ipynb  data_ndvi.ipynb  data_obs_pipeline.ipynb  data_weather_pipeline copy.ipynb  environment.yml  historical_weather_pipeline copy.ipynb  main.py  packages.txt  pyproject.toml  requirements.txt  setup.py  upload_dummy_to_hopsworks.py  upload_features_hopsworks.py  upload_ndvi.py  upload_observations.py  upload_weather.py  uv.lock.backup
.github/workflows/: daily-pipeline.yml  monthly-inference.yml  ndvi_pipeline.yml  weather_pipeline.yml
data/beetle/: artportalen_final.csv  artportalen_raw.xlsx
data/country/: era5coords_df.csv  era5points_df.csv
data/ndvi/: backfill_ndvi_final.csv  ndvi_12_12_2025_.csv  ndvi_12_2025_.csv  ndvi_27_12_2025_.csv  ndvi_final.csv
data/predictions/: pressence_1_12_2025_.csv
data/weather_daily/: weather_12_2025_.csv  weather_27_12_2025_.csv  weather_29_12_2025_.csv
data/weather_monthly/: weather_final.csv
models/: xgboost_model  xgboost_v1.pkl
notebooks/: backfill_ndvi.ipynb  backfill_ndvi.py  backfill_obs.ipynb  backfill_weather.ipynb  data_ndvi.ipynb  data_train.ipynb  data_weather_pipeline copy.ipynb  download_utils.py  feature_backfill_ndvi.ipynb  feature_backfill_obs.ipynb  feature_backfill_weather.ipynb  feature_pipeline_ndvi.ipynb  feature_pipeline_weather.ipynb  inference_ndvi.ipynb  inference_pipeline.ipynb  inference_weather.ipynb  inference_weather.py  output_utils.py  run_inference.ipynb  train_model.ipynb  training_pipeline.ipynb
(+1 files in other folders)
