[project]
name = "scalable-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hopsworks>=4.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyproj>=3.7.2",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
]
