[project]
name = "scalable-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdsapi>=0.7.0",
    "earthengine-api>=0.1.0",
    "hopsworks[python]>=4.2.0,<4.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.0,<2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.1.0,<2.2.0", 
    "plotly>=6.5.0",
    "pyproj>=3.7.2",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
    "xarray>=2024.0.0,<2025.0.0",
    "geopandas>=1.0.0",
]
